--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -59,7 +59,7 @@
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
-                                <a href="#" class="list-group-item">
+                                <!--a href="#" class="list-group-item">
                                     <i class="fa fa-comment fa-fw"></i> Chancador 2
                                     <span class="pull-right text-muted small"><em>4 minutes ago</em>
                                     </span>
@@ -68,7 +68,7 @@
                                     <i class="fa fa-comment fa-fw"></i> Chancador 3
                                     <span class="pull-right text-muted small"><em>25 minutes ago</em>
                                     </span>
-                                </a>
+                                </a-->
 
                             </div>
                             <!-- /.list-group -->
