--- a/src/app/device/device.html
+++ b/src/app/device/device.html
@@ -22,61 +22,106 @@
             </div>
             
             <div class="row">
-                <div class="col-md-6 ">
-                    <div class="panel panel-default">
+                <div class="col-md-4 ">
+                    <div class="panel panel-info">
                       <div class="panel-heading">
-                        <h3 class="panel-title">Último valor de la polución (mg/m3)</h3>
+                        <h3 class="panel-title">Último valor de polución (mg/m<sup>3</sup>)</h3>
                       </div>
                       <div class="panel-body">
-                            <h3 class="text-center text-success">{{vm.device.polucion}} (mg/m3)</h3>
+                            <h2 class="text-center text-warning">{{vm.lastPolutionVal}} <small>mg/m<sup>3</sup></small></span></h2>
                       </div>
                     </div>
                 </div>
-                 <div class="col-md-6 ">
-                    <div class="panel panel-default">
+               <div class="col-md-4 ">
+                  <div class="panel panel-info">
+                    <div class="panel-heading">
+                      <h3 class="panel-title">% de mitigación</h3>
+                    </div>
+                    <div class="panel-body">
+                          <c3chart bindto-id="gauge" chart-data="gauge.data" chart-columns="gauge.columns">
+                                  <chart-size chart-height="100"></chart-size> 
+                          </c3chart>
+                    </div>
+                </div>
+                </div>
+                 <div class="col-md-4 ">
+                    <div class="panel panel-info">
                       <div class="panel-heading">
-                        <h3 class="panel-title">Sensibilidad</h3>
+                        <h3 class="panel-title">Dosificación</h3>
                       </div>
                       <div class="panel-body">
-                         <rzslider  rz-slider-model="vm.slider.value" rz-slider-options="vm.slider.options"></rzslider>
+                         <rzslider ng-if="vm.device.auto_supresor"  rz-slider-model="vm.slider.value" rz-slider-options="vm.slider.options"></rzslider>
+                         <p class="text-center text-warning" ng-if="!vm.device.auto_supresor">Desactivado</p>
                       </div>
                     </div>
                 </div>
             </div>
-            <div class="row" ng-if="vm.hasEmptyDatapoints">
-              <div class="col-md-12 ">
-                <h3 class="text-danger text-center">No se han recibido datos en la última hora</h3>
-                <p>&nbsp;</p>
-                <p>&nbsp;</p>
-
+            <div class="row" >
+                <div class="col-md-12 ">
+                    <div class="panel panel-info">
+                      <div class="panel-heading">
+                        <h3 class="panel-title">Seleccionar baseline de los siguientes obtenidos esta semana</h3>
+                      </div>
+                      <div class="panel-body">
+                        <a class="btn btn-xs btn-default col-md-3" ng-class="{'active': baseline.from == vm.currentBaseline.from }"  ng-repeat="baseline in vm.availableBaselines" ng-click="vm.selectBaseline(baseline)">
+                           <h4>{{baseline.baseline}}</h4>
+                           <p>
+                             <small>
+                             <strong>{{baseline.count}} puntos</strong> <br />
+                              {{baseline.from | date:'EEEE dd/MM/y  HH:mm:ss'}}  - <br /> 
+                             {{baseline.to | date:'EEEE dd/MM/y  HH:mm:ss' }}</small>
+                           </p>
+                        </a>
+                      </div>
+                    </div>
+                </div>
+              <div class="col-md-12 " ng-if="vm.hasEmptyDatapoints">
+                <h3 class="text-danger text-center" ng-if="vm.viewTimespan == 'hour'">No se han recibido datos en la última hora, <a href="javascript:;" ng-click="vm.updateTimespan('day')">prueba cargando el último dia</a></h3>
               </div>
             </div>
 
-             <div class="row" ng-if="!vm.hasEmptyDatapoints">
+             <div class="row" >
                 <div class="col-md-12 ">
-                    <div class="panel panel-default">
+                    <div class="panel panel-primary">
                       <div class="panel-heading">
-                        <h3 class="panel-title">Polución <strong>Última Hora</strong> (mg/m3)</h3>
+                        
                        
-                         <!--div class="pull-right">
+                         <div class="pull-right">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                    Mostrar por tiempo
+                                    Cambiar rango de visualización
                                     <span class="caret"></span>
                                 </button>
                                 <ul class="dropdown-menu pull-right" role="menu">
-                                    <li><a ng-click="vm.drawGraphFromTime(1)">Última Hora</a>
+                                    <li><a ng-class="{'active': vm.viewTimespan == 'hour'}" ng-click="vm.updateTimespan('hour')">1 Hora</a>
                                     </li>
-                                    <li><a ng-click="vm.drawGraphFromTime(24)">Último dia</a>
+                                    <li><a ng-class="{'active': vm.viewTimespan == '3hours'}" ng-click="vm.updateTimespan('3hours')">3 Horas</a>
                                     </li>
-                                    <li><a ng-click="vm.drawGraphFromTime(24*7)">Última Semana</a>
+                                    <li><a ng-class="{'active': vm.viewTimespan == 'day'}" ng-click="vm.updateTimespan('day')">1 Dia</a>
                                     </li>
                                 </ul>
                             </div>
-                         </div-->
+                         </div>
+                         <h2 class="panel-title">Concentración 
+                            <strong ng-if="vm.viewTimespan == 'hour'">Última Hora</strong>
+                            <strong ng-if="vm.viewTimespan == '3hours'">Últimas 3 Horas</strong>
+                            <strong ng-if="vm.viewTimespan == 'day'">Último Día</strong>
+                            (mg/m3)
+                         </h2>
                       </div>
-                      <div class="panel-body">
-                         <div id="last-time-chart" class="text-center">Cargando gráfico ...</div>
+                      <div class="panel-body" >
+                         <div id="last-time-chart" class="text-center"><span >Cargando gráfico ...</span></div>
+                      </div>
+                      <div class="panel-footer">
+                        <h4>Exportar datos</h4>
+                        <div class="btn-group btn-group-justified" role="group" role="group" aria-label="...">
+                          <a ng-href="{{vm.downloadUrls.hour}}" target="_blank" role="button" class="btn btn-primary"><i class="glyphicon glyphicon-download"></i> Última Hora</a>
+                          <a ng-href="{{vm.downloadUrls.day}}" target="_blank" role="button" class="btn btn-primary"><i class="glyphicon glyphicon-download"></i>  Último Día</a>
+                          <a ng-href="{{vm.downloadUrls.week" target="_blank" role="button" class="btn btn-success"><i class="glyphicon glyphicon-download"></i>  Última Semana</a>
+                          <a ng-href="{{vm.downloadUrls.month}}" target="_blank" role="button" class="btn btn-warning"><i class="glyphicon glyphicon-download"></i>  Último Mes</a>
+                           <a ng-href="{{vm.downloadUrls.all}}" target="_blank" role="button" class="btn btn-danger"><i class="glyphicon glyphicon-download"></i>  Todos los datos</a>
+                        </div>
+
                       </div>
                     </div>
                 </div>
@@ -122,8 +167,8 @@
                                             <label class="col-md-4" for="">Tipo de sensor</label>
                                             <div class="col-md-8">
                                                 <select class="form-control" name="deviceType" ng-model="vm.device.type">
-                                                    <option value="polucion-simple">Polución simple</option>
-                                                    <option value="polucion-gps">Polución simple con gps</option>
+                                                    <option value="polucion-simple">Chancado y Correas</option>
+                                                    <option value="polucion-gps">Caminos</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -143,8 +188,8 @@
                                            <label class="col-md-4" for="">Modo de lectura</label>
                                             <div class="col-md-8">
                                                 <select class="form-control" name="deviceMode" ng-model="vm.device.mode">
-                                                    <option value="linea-base" selected="selected">Linea base</option>
-                                                    <option value="ssp">SSP</option>
+                                                    <option value="linea-base" selected="selected">Sin supresor</option>
+                                                    <option value="ssp">Con supresor</option>
                                                 </select>
                                             </div>
                                         </div> 
@@ -174,6 +219,12 @@
                                            <label class="col-md-4" for="">Umbral de Alerta</label>
                                            <div class="col-md-8">
                                                 <input class="form-control" ng-model="vm.device.alert_treadshot" placeholder="" name="deviceUmbralAlerta" type="text"  >
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                           <label class="col-md-4" for="">Auto Supresor</label>
+                                           <div class="col-md-8">
+                                                <input   ng-model="vm.device.auto_supresor" name="deviceAutoSupresor" type="checkbox" > <span>Activado</span>
                                             </div>
                                         </div>
                                                   
