pre-version fix

--- a/src/app/device/device.html
+++ b/src/app/device/device.html
@@ -117,7 +117,7 @@
                         <div class="btn-group btn-group-justified" role="group" role="group" aria-label="...">
                           <a ng-href="{{vm.downloadUrls.hour}}" target="_blank" role="button" class="btn btn-primary"><i class="glyphicon glyphicon-download"></i> Última Hora</a>
                           <a ng-href="{{vm.downloadUrls.day}}" target="_blank" role="button" class="btn btn-primary"><i class="glyphicon glyphicon-download"></i>  Último Día</a>
-                          <a ng-href="{{vm.downloadUrls.week" target="_blank" role="button" class="btn btn-success"><i class="glyphicon glyphicon-download"></i>  Última Semana</a>
+                          <a ng-href="{{vm.downloadUrls.week}}" target="_blank" role="button" class="btn btn-success"><i class="glyphicon glyphicon-download"></i>  Última Semana</a>
                           <a ng-href="{{vm.downloadUrls.month}}" target="_blank" role="button" class="btn btn-warning"><i class="glyphicon glyphicon-download"></i>  Último Mes</a>
                            <a ng-href="{{vm.downloadUrls.all}}" target="_blank" role="button" class="btn btn-danger"><i class="glyphicon glyphicon-download"></i>  Todos los datos</a>
                         </div>
