--- a/src/app/tema/less/webapp.less
+++ b/src/app/tema/less/webapp.less
@@ -21,3 +21,12 @@
 .pildorita{
   padding:15px;
 }
+
+.settings-link{
+  color:#999;
+  font-size:18px;
+  line-height:36px;
+  &:hover{
+    text-decoration:none;
+  }
+}
