--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,4 @@
- <div class="container">
+ <div id="login"><div class="container">
         <div class="row">
             <div class="col-md-4 col-md-offset-4">
                 <div class="login-panel panel panel-default">
@@ -39,3 +39,4 @@
             </div>
         </div>
     </div>
+</div>
